--- a/projects/ngx-dhis2-selection-filters/src/lib/modules/data-filter/data-filter.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/modules/data-filter/data-filter.component.html
@@ -100,7 +100,8 @@
 
   <!-- data filter groups -->
   <div class="data-filter-groups-container" *ngIf="showGroupingPanel">
-    <app-data-filter-groups [dataGroups]="selectedGroups" [selectedItems]="selectedItems$ | async"></app-data-filter-groups>
+    <app-data-filter-groups [dataGroups]="selectedGroups" [selectedGroupId]="selectedGroupId" [selectedItems]="selectedItems$ | async"
+      (dataGroupsUpdate)="onDataGroupsUpdate($event)" (selectedGroupUpdate)="onSelectedGroupUpdate($event)"></app-data-filter-groups>
   </div>
   <!-- end of data filter groups -->
 </div>
