--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
@@ -51,7 +51,8 @@
   <!--selection filter body-->
   <div class="selection-filter-body" *ngIf="selectedFilter !== '' && showFilterBody">
     <!--data filter-->
-    <app-data-filter *ngIf="selectedFilter === 'DATA'" [selectedItems]="selectedData"></app-data-filter>
+    <app-data-filter *ngIf="selectedFilter === 'DATA'" [selectedItems]="selectedData" (dataFilterClose)="onFilterClose($event, 'DATA')"
+      (dataFilterUpdate)="onFilterUpdate($event, 'DATA')"></app-data-filter>
     <!--end of data filter
 
     <!--period filter-->
