added period selection support

--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
@@ -56,8 +56,8 @@
     <!--end of data filter
 
     <!--period filter-->
-    <!-- <app-period-filter *ngIf="selectedFilter === 'PERIOD'" [selectedPeriods]="selectedPeriods" (onPeriodFilterClose)="onFilterClose($event, 'PERIOD')"
-      (onPeriodUpdate)="onFilterUpdate($event, 'PERIOD')"></app-period-filter> -->
+    <app-period-filter *ngIf="selectedFilter === 'PERIOD'" [selectedPeriods]="selectedPeriods" (periodFilterClose)="onFilterClose($event, 'PERIOD')"
+      (periodFilterUpdate)="onFilterUpdate($event, 'PERIOD')"></app-period-filter>
     <!--end of period filter-->
 
     <!--org unit filter-->
