--- a/projects/ngx-dhis2-selection-filters/src/lib/modules/data-filter/data-filter.component.css
+++ b/projects/ngx-dhis2-selection-filters/src/lib/modules/data-filter/data-filter.component.css
@@ -103,12 +103,14 @@
 
 .data-filter-group-list::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
 
 .data-filter-group-list::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
 }
 
 .data-filter-group-list > li > a {
@@ -144,9 +146,6 @@
 
 .data-filter-grouping-btn > img {
   height: 17px;
-}
-
-.data-filter-header {
 }
 
 .data-filter-available-header {
@@ -227,6 +226,7 @@
 .data-filter-available-body::-webkit-scrollbar-track,
 .data-filter-selected-body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
 
@@ -234,6 +234,7 @@
 .data-filter-selected-body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
 }
 
 .data-filter-btns {
