--- a/projects/ngx-dhis2-selection-filters/src/lib/modules/data-filter/components/data-filter-groups/data-filter-groups.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/modules/data-filter/components/data-filter-groups/data-filter-groups.component.html
@@ -6,9 +6,9 @@
 
   <div class="data-filter-group__list">
     <!-- data filter group item -->
-    <div class="data-filter-group__item" *ngFor="let group of dataGroups" (click)="onSetCurrentGroup(group, $event)">
+    <div class="data-filter-group__item" *ngFor="let group of dataGroups">
       <!-- title -->
-      <div class="data-filter-group__item-header">
+      <div class="data-filter-group__item-header" (click)="onSetCurrentGroup(group, $event)">
         <div class="data-filter-group__item-header-title">
           <button>
             <img [src]="dragIcon" alt="">
