fix: resolve build issues originated from data filter

--- a/projects/ngx-dhis2-selection-filters/src/lib/modules/data-filter/components/data-filter-group-member/data-filter-group-member.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/modules/data-filter/components/data-filter-group-member/data-filter-group-member.component.html
@@ -9,7 +9,9 @@
         title="Remove item from group"
         class="btn btn-sm text-danger data-group-delete-btn"
       >
-        <i class="icon-trash-empty"></i>
+        <img
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABLSURBVDhPY6AVaAXin0D8H0q3ADFJAKRJEMIE0yA+QQCyjViME+CVBAJC8nAFhGicYNSAwWAAcgpEB0SlSOQ8gI5B4k1APKgAAwMA0Fw/578RhNEAAAAASUVORK5CYII="
+        />
       </button>
       <div class="btn btn-sm">
         <i class="{{ isFormOpen ? 'icon-up-open' : 'icon-down-open' }}"></i>
