--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.css
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.css
@@ -2,15 +2,65 @@
   position: relative;
 }
 
+.selection-filter-btn {
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+  border-style: none;
+  cursor: pointer;
+  background-color: transparent;
+  height: 25px;
+  width: auto;
+  border-radius: 15px;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  display: flex;
+  align-items: center !important;
+  justify-content: space-between;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  font-size: 12px;
+}
+
+.filter-icons {
+  color: #7DB2E8 !important;
+}
+
+.home-filter-button {
+  background-color: #0b6190;
+  color: #fff;
+}
+
+.home-filter-icons {
+  color: #fff;
+}
+
+.mat-chip .mat-standard-chip .mat-chip-selected .mat-primary {
+  background-color: #0b6190 !important;
+}
+
+.selected-filter {
+  /* color: #fff !important; */
+  /* border: 1px solid #0b6190; */
+  background-color: #e0e0e0;
+}
+
+.unselected-filter {
+  background-color: #fff;
+}
 .selection-filter-header {
   display: flex;
 }
 
-.selection-filter-btn {
+/* .selection-filter-btn {
   outline: none;
   display: flex;
   align-items: center;
-}
+} */
 
 .selection-filter-btn:disabled {
   cursor: not-allowed;
