--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
@@ -108,8 +108,8 @@
     <lib-ngx-dhis2-validation-rule-filter
       *ngIf="selectedFilter === 'VALIDATIONRULEGROUP'"
       [dataSelection]='dataSelections' 
-      (update)="onUpdateValidationRuleGroup($event, 'VALIDATIONRULEGROUP')"
-      (close)="onUpdateValidationRuleGroup($event, 'VALIDATIONRULEGROUP')">
+      (update)="onFilterUpdate($event, 'VALIDATIONRULEGROUP')"
+      (close)="onFilterClose($event, 'VALIDATIONRULEGROUP')">
     </lib-ngx-dhis2-validation-rule-filter>
     <!--end of Validation Rule Group filter-->
 
