fix: resolve dependencies issues with other children modules

--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
@@ -33,7 +33,6 @@
       </button>
       <!--end of data filter button-->
 
-
       <!--Validation Rule Group filter button-->
       <button
         mat-stroked-button
@@ -47,7 +46,9 @@
         <span>{{ 'VR-Group' | translate }}</span>
         <i
           class="fa {{
-            selectedFilter === 'VALIDATIONRULEGROUP' ? 'fa-caret-up' : 'fa-caret-down'
+            selectedFilter === 'VALIDATIONRULEGROUP'
+              ? 'fa-caret-up'
+              : 'fa-caret-down'
           }} ml-2"
         ></i>
       </button>
