--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
@@ -131,6 +131,7 @@
     <!-- validation rule group -->
     <lib-ngx-dhis2-validation-rule-filter
       *ngIf="selectedFilter === 'VALIDATIONRULEGROUP'"
+      [dataSelection]="selectedValidationDataElements"
       (update)="onFilterUpdate($event, 'VALIDATIONRULEGROUP')"
       (close)="onFilterClose($event, 'VALIDATIONRULEGROUP')"
     ></lib-ngx-dhis2-validation-rule-filter>
