--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
           <div>
             <ngx-dhis2-selection-filters
               [dataSelections]="[]"
-              [selectionFilterConfig]="{}"
+              [selectionFilterConfig]="selectionFilterConfig"
               (update)="onUpdate($event)"
             ></ngx-dhis2-selection-filters>
           </div>
