--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
@@ -108,6 +108,7 @@
     <ngx-dhis2-data-filter
       *ngIf="selectedFilter === 'DATA'"
       [selectedItems]="selectedData"
+      [dataFilterConfig]="selectionFilterConfig?.dataFilterConfig"
       (close)="onFilterClose($event, 'DATA')"
       (update)="onFilterUpdate($event, 'DATA')"
     ></ngx-dhis2-data-filter>
