fix: added support for the selected validation rule group
This commmit will add support for the already selected validation rule group to be displayed in the
selected area

--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
@@ -139,6 +139,7 @@
     <lib-ngx-dhis2-validation-rule-filter
       *ngIf="selectedFilter === 'VALIDATIONRULEGROUP'"
       [dataSelection]="selectedValidationDataElements"
+      [selectedVRGs]='selectedValidationRuleGroups'
       (update)="onFilterUpdate($event, 'VALIDATIONRULEGROUP')"
       (close)="onFilterClose($event, 'VALIDATIONRULEGROUP')"
     ></lib-ngx-dhis2-validation-rule-filter>
