feat: add support to show summary for the selected filters
This closes #34

--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.css
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.css
@@ -70,6 +70,12 @@
   transform: rotate(180deg);
 }
 
+.summary-selection {
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: 9px;
+}
+
 @media (max-width: 500px) {
   .selection-filter-body {
     width: 95%;
