--- a/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
+++ b/projects/ngx-dhis2-selection-filters/src/lib/containers/ngx-dhis2-selection-filters/ngx-dhis2-selection-filters.component.html
@@ -88,6 +88,7 @@
 
     <!--period filter-->
     <ngx-dhis2-period-filter *ngIf="selectedFilter === 'PERIOD'" [selectedPeriods]="selectedPeriods"
+      [disablePeriodSelection]="true"
       [periodFilterConfig]="selectionFilterConfig.periodFilterConfig" [lowestPeriodType]="lowestPeriodType"
       (close)="onFilterClose($event, 'PERIOD')" (update)="onFilterUpdate($event, 'PERIOD')"></ngx-dhis2-period-filter>
     <!--end of period filter-->
